// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TicketListMini > renders empty state 1`] = `
<DocumentFragment>
  <div
    class="dashboard-section"
  >
    <div
      class="section-header"
    >
      <h3>
        Recent Matters
      </h3>
    </div>
    <div
      class="ticket-list-mini"
    >
      <div
        class="empty-mini"
      >
        No matters found
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TicketListMini > renders title and tickets 1`] = `
<DocumentFragment>
  <div
    class="dashboard-section"
  >
    <div
      class="section-header"
    >
      <h3>
        Recent Matters
      </h3>
    </div>
    <div
      class="ticket-list-mini"
    >
      <div
        class="ticket-item-mini"
      >
        <div
          class="ticket-info"
        >
          <span
            class="ticket-id"
          >
            #1
          </span>
          <span
            class="ticket-title"
          >
            Ticket 1
          </span>
        </div>
        <span
          class="priority-badge priority-high"
        >
          high
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
